[tool.poetry]
name = "intro"
version = "0.1.0"
description = "first vercel function"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
